infra/base/platform/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: smarterp-platform-route
  namespace: smarterp
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: ingress
  hostnames:
    - "platform.etsoo.cn"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: smarterp-platform
          port: 8080
